Update .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,17 @@
-# 忽略虚拟环境目录 
-venv/ 
-ECHO 处于打开状态。
-# 忽略 Python 缓存文件 
+# 锟斤拷锟斤拷锟斤拷锟解环锟斤拷目录 
+myenv/ 
+ECHO 锟斤拷锟节达拷状态锟斤拷
+# 锟斤拷锟斤拷 Python 锟斤拷锟斤拷锟侥硷拷 
 __pycache__/ 
 *.py[cod] 
-ECHO 处于打开状态。
-# 忽略 VSCode 配置文件 
+ECHO 锟斤拷锟节达拷状态锟斤拷
+# 锟斤拷锟斤拷 VSCode 锟斤拷锟斤拷锟侥硷拷 
 .vscode/ 
-ECHO 处于打开状态。
-# 忽略操作系统文件 
+ECHO 锟斤拷锟节达拷状态锟斤拷
+# 锟斤拷锟皆诧拷锟斤拷系统锟侥硷拷 
 .DS_Store 
 Thumbs.db 
-ECHO 处于打开状态。
-# 忽略日志文件 
+ECHO 锟斤拷锟节达拷状态锟斤拷
+# 锟斤拷锟斤拷锟斤拷志锟侥硷拷 
 *.log 
+myenv/ 
